// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Surevy correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Surevy
    themes={Array []}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="col-8 border px-4 py-3 mx-auto mt-5"
      >
        <div
          className="row justify-content-end"
        >
          <button
            aria-label="Close"
            className="close"
            onClick={[Function]}
            type="button"
          >
            <span
              aria-hidden="true"
            >
              ×
            </span>
          </button>
        </div>
        <div
          className="pt-3"
        >
          <div
            className="d-flex flex-column"
          >
            <ThemeQuestion
              averageResponse={Array []}
              themes={Array []}
            />
          </div>
        </div>
      </div>,
      "className": "row w-100 bg-white animate slideIn survey-results",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="row justify-content-end"
          >
            <button
              aria-label="Close"
              className="close"
              onClick={[Function]}
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ×
              </span>
            </button>
          </div>,
          undefined,
          undefined,
          <div
            className="pt-3"
          >
            <div
              className="d-flex flex-column"
            >
              <ThemeQuestion
                averageResponse={Array []}
                themes={Array []}
              />
            </div>
          </div>,
        ],
        "className": "col-8 border px-4 py-3 mx-auto mt-5",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <button
              aria-label="Close"
              className="close"
              onClick={[Function]}
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ×
              </span>
            </button>,
            "className": "row justify-content-end",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "aria-label": "Close",
              "children": <span
                aria-hidden="true"
              >
                ×
              </span>,
              "className": "close",
              "onClick": [Function],
              "type": "button",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "aria-hidden": "true",
                "children": "×",
              },
              "ref": null,
              "rendered": "×",
              "type": "span",
            },
            "type": "button",
          },
          "type": "div",
        },
        undefined,
        undefined,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="d-flex flex-column"
            >
              <ThemeQuestion
                averageResponse={Array []}
                themes={Array []}
              />
            </div>,
            "className": "pt-3",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <ThemeQuestion
                averageResponse={Array []}
                themes={Array []}
              />,
              "className": "d-flex flex-column",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "averageResponse": Array [],
                "themes": Array [],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "div",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="col-8 border px-4 py-3 mx-auto mt-5"
        >
          <div
            className="row justify-content-end"
          >
            <button
              aria-label="Close"
              className="close"
              onClick={[Function]}
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ×
              </span>
            </button>
          </div>
          <div
            className="pt-3"
          >
            <div
              className="d-flex flex-column"
            >
              <ThemeQuestion
                averageResponse={Array []}
                themes={Array []}
              />
            </div>
          </div>
        </div>,
        "className": "row w-100 bg-white animate slideIn survey-results",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="row justify-content-end"
            >
              <button
                aria-label="Close"
                className="close"
                onClick={[Function]}
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </button>
            </div>,
            undefined,
            undefined,
            <div
              className="pt-3"
            >
              <div
                className="d-flex flex-column"
              >
                <ThemeQuestion
                  averageResponse={Array []}
                  themes={Array []}
                />
              </div>
            </div>,
          ],
          "className": "col-8 border px-4 py-3 mx-auto mt-5",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <button
                aria-label="Close"
                className="close"
                onClick={[Function]}
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </button>,
              "className": "row justify-content-end",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "aria-label": "Close",
                "children": <span
                  aria-hidden="true"
                >
                  ×
                </span>,
                "className": "close",
                "onClick": [Function],
                "type": "button",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "aria-hidden": "true",
                  "children": "×",
                },
                "ref": null,
                "rendered": "×",
                "type": "span",
              },
              "type": "button",
            },
            "type": "div",
          },
          undefined,
          undefined,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="d-flex flex-column"
              >
                <ThemeQuestion
                  averageResponse={Array []}
                  themes={Array []}
                />
              </div>,
              "className": "pt-3",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <ThemeQuestion
                  averageResponse={Array []}
                  themes={Array []}
                />,
                "className": "d-flex flex-column",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "averageResponse": Array [],
                  "themes": Array [],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "div",
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`should render SurevyList correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SurevyList
    response_rate={23.5}
    themes={Array []}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="border px-4 py-3"
      >
        <div
          className="border-bottom"
        >
          <div
            className="text-primary"
          >
            Surevy name
          </div>
          <h5
            className="font-weight-normal"
          />
        </div>
        <div
          className="pt-3 border-bottom"
        >
          <div
            className="text-primary"
          >
            Surevy participants
          </div>
          <h5
            className="font-weight-normal"
          />
        </div>
        <div
          className="pt-3 border-bottom"
        >
          <div
            className="text-primary"
          >
            Surevy rate
          </div>
          <h5
            className="font-weight-normal"
          >
            23.50
          </h5>
        </div>
        <div
          className="pt-3 border-bottom"
        >
          <div
            className="text-primary"
          >
            Surevy submittions
          </div>
          <h5
            className="font-weight-normal"
          />
        </div>
        <div
          className="pt-3"
        >
          <button
            className="btn btn-secondary rounded-0"
            onClick={[Function]}
          >
            Go to survey
          </button>
        </div>
      </div>,
      "className": "col-6",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="border-bottom"
          >
            <div
              className="text-primary"
            >
              Surevy name
            </div>
            <h5
              className="font-weight-normal"
            />
          </div>,
          <div
            className="pt-3 border-bottom"
          >
            <div
              className="text-primary"
            >
              Surevy participants
            </div>
            <h5
              className="font-weight-normal"
            />
          </div>,
          <div
            className="pt-3 border-bottom"
          >
            <div
              className="text-primary"
            >
              Surevy rate
            </div>
            <h5
              className="font-weight-normal"
            >
              23.50
            </h5>
          </div>,
          <div
            className="pt-3 border-bottom"
          >
            <div
              className="text-primary"
            >
              Surevy submittions
            </div>
            <h5
              className="font-weight-normal"
            />
          </div>,
          <div
            className="pt-3"
          >
            <button
              className="btn btn-secondary rounded-0"
              onClick={[Function]}
            >
              Go to survey
            </button>
          </div>,
        ],
        "className": "border px-4 py-3",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="text-primary"
              >
                Surevy name
              </div>,
              <h5
                className="font-weight-normal"
              />,
            ],
            "className": "border-bottom",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Surevy name",
                "className": "text-primary",
              },
              "ref": null,
              "rendered": "Surevy name",
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": undefined,
                "className": "font-weight-normal",
              },
              "ref": null,
              "rendered": null,
              "type": "h5",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="text-primary"
              >
                Surevy participants
              </div>,
              <h5
                className="font-weight-normal"
              />,
            ],
            "className": "pt-3 border-bottom",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Surevy participants",
                "className": "text-primary",
              },
              "ref": null,
              "rendered": "Surevy participants",
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": undefined,
                "className": "font-weight-normal",
              },
              "ref": null,
              "rendered": null,
              "type": "h5",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="text-primary"
              >
                Surevy rate
              </div>,
              <h5
                className="font-weight-normal"
              >
                23.50
              </h5>,
            ],
            "className": "pt-3 border-bottom",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Surevy rate",
                "className": "text-primary",
              },
              "ref": null,
              "rendered": "Surevy rate",
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "23.50",
                "className": "font-weight-normal",
              },
              "ref": null,
              "rendered": "23.50",
              "type": "h5",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="text-primary"
              >
                Surevy submittions
              </div>,
              <h5
                className="font-weight-normal"
              />,
            ],
            "className": "pt-3 border-bottom",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Surevy submittions",
                "className": "text-primary",
              },
              "ref": null,
              "rendered": "Surevy submittions",
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": undefined,
                "className": "font-weight-normal",
              },
              "ref": null,
              "rendered": null,
              "type": "h5",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <button
              className="btn btn-secondary rounded-0"
              onClick={[Function]}
            >
              Go to survey
            </button>,
            "className": "pt-3",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Go to survey",
              "className": "btn btn-secondary rounded-0",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": "Go to survey",
            "type": "button",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="border px-4 py-3"
        >
          <div
            className="border-bottom"
          >
            <div
              className="text-primary"
            >
              Surevy name
            </div>
            <h5
              className="font-weight-normal"
            />
          </div>
          <div
            className="pt-3 border-bottom"
          >
            <div
              className="text-primary"
            >
              Surevy participants
            </div>
            <h5
              className="font-weight-normal"
            />
          </div>
          <div
            className="pt-3 border-bottom"
          >
            <div
              className="text-primary"
            >
              Surevy rate
            </div>
            <h5
              className="font-weight-normal"
            >
              23.50
            </h5>
          </div>
          <div
            className="pt-3 border-bottom"
          >
            <div
              className="text-primary"
            >
              Surevy submittions
            </div>
            <h5
              className="font-weight-normal"
            />
          </div>
          <div
            className="pt-3"
          >
            <button
              className="btn btn-secondary rounded-0"
              onClick={[Function]}
            >
              Go to survey
            </button>
          </div>
        </div>,
        "className": "col-6",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="border-bottom"
            >
              <div
                className="text-primary"
              >
                Surevy name
              </div>
              <h5
                className="font-weight-normal"
              />
            </div>,
            <div
              className="pt-3 border-bottom"
            >
              <div
                className="text-primary"
              >
                Surevy participants
              </div>
              <h5
                className="font-weight-normal"
              />
            </div>,
            <div
              className="pt-3 border-bottom"
            >
              <div
                className="text-primary"
              >
                Surevy rate
              </div>
              <h5
                className="font-weight-normal"
              >
                23.50
              </h5>
            </div>,
            <div
              className="pt-3 border-bottom"
            >
              <div
                className="text-primary"
              >
                Surevy submittions
              </div>
              <h5
                className="font-weight-normal"
              />
            </div>,
            <div
              className="pt-3"
            >
              <button
                className="btn btn-secondary rounded-0"
                onClick={[Function]}
              >
                Go to survey
              </button>
            </div>,
          ],
          "className": "border px-4 py-3",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="text-primary"
                >
                  Surevy name
                </div>,
                <h5
                  className="font-weight-normal"
                />,
              ],
              "className": "border-bottom",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Surevy name",
                  "className": "text-primary",
                },
                "ref": null,
                "rendered": "Surevy name",
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": undefined,
                  "className": "font-weight-normal",
                },
                "ref": null,
                "rendered": null,
                "type": "h5",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="text-primary"
                >
                  Surevy participants
                </div>,
                <h5
                  className="font-weight-normal"
                />,
              ],
              "className": "pt-3 border-bottom",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Surevy participants",
                  "className": "text-primary",
                },
                "ref": null,
                "rendered": "Surevy participants",
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": undefined,
                  "className": "font-weight-normal",
                },
                "ref": null,
                "rendered": null,
                "type": "h5",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="text-primary"
                >
                  Surevy rate
                </div>,
                <h5
                  className="font-weight-normal"
                >
                  23.50
                </h5>,
              ],
              "className": "pt-3 border-bottom",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Surevy rate",
                  "className": "text-primary",
                },
                "ref": null,
                "rendered": "Surevy rate",
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "23.50",
                  "className": "font-weight-normal",
                },
                "ref": null,
                "rendered": "23.50",
                "type": "h5",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="text-primary"
                >
                  Surevy submittions
                </div>,
                <h5
                  className="font-weight-normal"
                />,
              ],
              "className": "pt-3 border-bottom",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Surevy submittions",
                  "className": "text-primary",
                },
                "ref": null,
                "rendered": "Surevy submittions",
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": undefined,
                  "className": "font-weight-normal",
                },
                "ref": null,
                "rendered": null,
                "type": "h5",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <button
                className="btn btn-secondary rounded-0"
                onClick={[Function]}
              >
                Go to survey
              </button>,
              "className": "pt-3",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Go to survey",
                "className": "btn btn-secondary rounded-0",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "Go to survey",
              "type": "button",
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`should render SurevyList correctly 2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ThemeQuestion
    themes={Array []}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): undefined,
  Symbol(enzyme.__nodes__): Array [],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`should render correctly with no props 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Surevy
    themes={Array []}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="col-8 border px-4 py-3 mx-auto mt-5"
      >
        <div
          className="row justify-content-end"
        >
          <button
            aria-label="Close"
            className="close"
            onClick={[Function]}
            type="button"
          >
            <span
              aria-hidden="true"
            >
              ×
            </span>
          </button>
        </div>
        <div
          className="pt-3"
        >
          <div
            className="d-flex flex-column"
          >
            <ThemeQuestion
              averageResponse={Array []}
              themes={Array []}
            />
          </div>
        </div>
      </div>,
      "className": "row w-100 bg-white animate slideIn survey-results",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="row justify-content-end"
          >
            <button
              aria-label="Close"
              className="close"
              onClick={[Function]}
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ×
              </span>
            </button>
          </div>,
          undefined,
          undefined,
          <div
            className="pt-3"
          >
            <div
              className="d-flex flex-column"
            >
              <ThemeQuestion
                averageResponse={Array []}
                themes={Array []}
              />
            </div>
          </div>,
        ],
        "className": "col-8 border px-4 py-3 mx-auto mt-5",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <button
              aria-label="Close"
              className="close"
              onClick={[Function]}
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ×
              </span>
            </button>,
            "className": "row justify-content-end",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "aria-label": "Close",
              "children": <span
                aria-hidden="true"
              >
                ×
              </span>,
              "className": "close",
              "onClick": [Function],
              "type": "button",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "aria-hidden": "true",
                "children": "×",
              },
              "ref": null,
              "rendered": "×",
              "type": "span",
            },
            "type": "button",
          },
          "type": "div",
        },
        undefined,
        undefined,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="d-flex flex-column"
            >
              <ThemeQuestion
                averageResponse={Array []}
                themes={Array []}
              />
            </div>,
            "className": "pt-3",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <ThemeQuestion
                averageResponse={Array []}
                themes={Array []}
              />,
              "className": "d-flex flex-column",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "averageResponse": Array [],
                "themes": Array [],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "div",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="col-8 border px-4 py-3 mx-auto mt-5"
        >
          <div
            className="row justify-content-end"
          >
            <button
              aria-label="Close"
              className="close"
              onClick={[Function]}
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ×
              </span>
            </button>
          </div>
          <div
            className="pt-3"
          >
            <div
              className="d-flex flex-column"
            >
              <ThemeQuestion
                averageResponse={Array []}
                themes={Array []}
              />
            </div>
          </div>
        </div>,
        "className": "row w-100 bg-white animate slideIn survey-results",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="row justify-content-end"
            >
              <button
                aria-label="Close"
                className="close"
                onClick={[Function]}
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </button>
            </div>,
            undefined,
            undefined,
            <div
              className="pt-3"
            >
              <div
                className="d-flex flex-column"
              >
                <ThemeQuestion
                  averageResponse={Array []}
                  themes={Array []}
                />
              </div>
            </div>,
          ],
          "className": "col-8 border px-4 py-3 mx-auto mt-5",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <button
                aria-label="Close"
                className="close"
                onClick={[Function]}
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </button>,
              "className": "row justify-content-end",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "aria-label": "Close",
                "children": <span
                  aria-hidden="true"
                >
                  ×
                </span>,
                "className": "close",
                "onClick": [Function],
                "type": "button",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "aria-hidden": "true",
                  "children": "×",
                },
                "ref": null,
                "rendered": "×",
                "type": "span",
              },
              "type": "button",
            },
            "type": "div",
          },
          undefined,
          undefined,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="d-flex flex-column"
              >
                <ThemeQuestion
                  averageResponse={Array []}
                  themes={Array []}
                />
              </div>,
              "className": "pt-3",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <ThemeQuestion
                  averageResponse={Array []}
                  themes={Array []}
                />,
                "className": "d-flex flex-column",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "averageResponse": Array [],
                  "themes": Array [],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "div",
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`should render correctly with no props 2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SurevyList
    response_rate={23.5}
    themes={Array []}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="border px-4 py-3"
      >
        <div
          className="border-bottom"
        >
          <div
            className="text-primary"
          >
            Surevy name
          </div>
          <h5
            className="font-weight-normal"
          />
        </div>
        <div
          className="pt-3 border-bottom"
        >
          <div
            className="text-primary"
          >
            Surevy participants
          </div>
          <h5
            className="font-weight-normal"
          />
        </div>
        <div
          className="pt-3 border-bottom"
        >
          <div
            className="text-primary"
          >
            Surevy rate
          </div>
          <h5
            className="font-weight-normal"
          >
            23.50
          </h5>
        </div>
        <div
          className="pt-3 border-bottom"
        >
          <div
            className="text-primary"
          >
            Surevy submittions
          </div>
          <h5
            className="font-weight-normal"
          />
        </div>
        <div
          className="pt-3"
        >
          <button
            className="btn btn-secondary rounded-0"
            onClick={[Function]}
          >
            Go to survey
          </button>
        </div>
      </div>,
      "className": "col-6",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="border-bottom"
          >
            <div
              className="text-primary"
            >
              Surevy name
            </div>
            <h5
              className="font-weight-normal"
            />
          </div>,
          <div
            className="pt-3 border-bottom"
          >
            <div
              className="text-primary"
            >
              Surevy participants
            </div>
            <h5
              className="font-weight-normal"
            />
          </div>,
          <div
            className="pt-3 border-bottom"
          >
            <div
              className="text-primary"
            >
              Surevy rate
            </div>
            <h5
              className="font-weight-normal"
            >
              23.50
            </h5>
          </div>,
          <div
            className="pt-3 border-bottom"
          >
            <div
              className="text-primary"
            >
              Surevy submittions
            </div>
            <h5
              className="font-weight-normal"
            />
          </div>,
          <div
            className="pt-3"
          >
            <button
              className="btn btn-secondary rounded-0"
              onClick={[Function]}
            >
              Go to survey
            </button>
          </div>,
        ],
        "className": "border px-4 py-3",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="text-primary"
              >
                Surevy name
              </div>,
              <h5
                className="font-weight-normal"
              />,
            ],
            "className": "border-bottom",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Surevy name",
                "className": "text-primary",
              },
              "ref": null,
              "rendered": "Surevy name",
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": undefined,
                "className": "font-weight-normal",
              },
              "ref": null,
              "rendered": null,
              "type": "h5",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="text-primary"
              >
                Surevy participants
              </div>,
              <h5
                className="font-weight-normal"
              />,
            ],
            "className": "pt-3 border-bottom",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Surevy participants",
                "className": "text-primary",
              },
              "ref": null,
              "rendered": "Surevy participants",
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": undefined,
                "className": "font-weight-normal",
              },
              "ref": null,
              "rendered": null,
              "type": "h5",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="text-primary"
              >
                Surevy rate
              </div>,
              <h5
                className="font-weight-normal"
              >
                23.50
              </h5>,
            ],
            "className": "pt-3 border-bottom",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Surevy rate",
                "className": "text-primary",
              },
              "ref": null,
              "rendered": "Surevy rate",
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "23.50",
                "className": "font-weight-normal",
              },
              "ref": null,
              "rendered": "23.50",
              "type": "h5",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="text-primary"
              >
                Surevy submittions
              </div>,
              <h5
                className="font-weight-normal"
              />,
            ],
            "className": "pt-3 border-bottom",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Surevy submittions",
                "className": "text-primary",
              },
              "ref": null,
              "rendered": "Surevy submittions",
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": undefined,
                "className": "font-weight-normal",
              },
              "ref": null,
              "rendered": null,
              "type": "h5",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <button
              className="btn btn-secondary rounded-0"
              onClick={[Function]}
            >
              Go to survey
            </button>,
            "className": "pt-3",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Go to survey",
              "className": "btn btn-secondary rounded-0",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": "Go to survey",
            "type": "button",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="border px-4 py-3"
        >
          <div
            className="border-bottom"
          >
            <div
              className="text-primary"
            >
              Surevy name
            </div>
            <h5
              className="font-weight-normal"
            />
          </div>
          <div
            className="pt-3 border-bottom"
          >
            <div
              className="text-primary"
            >
              Surevy participants
            </div>
            <h5
              className="font-weight-normal"
            />
          </div>
          <div
            className="pt-3 border-bottom"
          >
            <div
              className="text-primary"
            >
              Surevy rate
            </div>
            <h5
              className="font-weight-normal"
            >
              23.50
            </h5>
          </div>
          <div
            className="pt-3 border-bottom"
          >
            <div
              className="text-primary"
            >
              Surevy submittions
            </div>
            <h5
              className="font-weight-normal"
            />
          </div>
          <div
            className="pt-3"
          >
            <button
              className="btn btn-secondary rounded-0"
              onClick={[Function]}
            >
              Go to survey
            </button>
          </div>
        </div>,
        "className": "col-6",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="border-bottom"
            >
              <div
                className="text-primary"
              >
                Surevy name
              </div>
              <h5
                className="font-weight-normal"
              />
            </div>,
            <div
              className="pt-3 border-bottom"
            >
              <div
                className="text-primary"
              >
                Surevy participants
              </div>
              <h5
                className="font-weight-normal"
              />
            </div>,
            <div
              className="pt-3 border-bottom"
            >
              <div
                className="text-primary"
              >
                Surevy rate
              </div>
              <h5
                className="font-weight-normal"
              >
                23.50
              </h5>
            </div>,
            <div
              className="pt-3 border-bottom"
            >
              <div
                className="text-primary"
              >
                Surevy submittions
              </div>
              <h5
                className="font-weight-normal"
              />
            </div>,
            <div
              className="pt-3"
            >
              <button
                className="btn btn-secondary rounded-0"
                onClick={[Function]}
              >
                Go to survey
              </button>
            </div>,
          ],
          "className": "border px-4 py-3",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="text-primary"
                >
                  Surevy name
                </div>,
                <h5
                  className="font-weight-normal"
                />,
              ],
              "className": "border-bottom",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Surevy name",
                  "className": "text-primary",
                },
                "ref": null,
                "rendered": "Surevy name",
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": undefined,
                  "className": "font-weight-normal",
                },
                "ref": null,
                "rendered": null,
                "type": "h5",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="text-primary"
                >
                  Surevy participants
                </div>,
                <h5
                  className="font-weight-normal"
                />,
              ],
              "className": "pt-3 border-bottom",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Surevy participants",
                  "className": "text-primary",
                },
                "ref": null,
                "rendered": "Surevy participants",
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": undefined,
                  "className": "font-weight-normal",
                },
                "ref": null,
                "rendered": null,
                "type": "h5",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="text-primary"
                >
                  Surevy rate
                </div>,
                <h5
                  className="font-weight-normal"
                >
                  23.50
                </h5>,
              ],
              "className": "pt-3 border-bottom",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Surevy rate",
                  "className": "text-primary",
                },
                "ref": null,
                "rendered": "Surevy rate",
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "23.50",
                  "className": "font-weight-normal",
                },
                "ref": null,
                "rendered": "23.50",
                "type": "h5",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="text-primary"
                >
                  Surevy submittions
                </div>,
                <h5
                  className="font-weight-normal"
                />,
              ],
              "className": "pt-3 border-bottom",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Surevy submittions",
                  "className": "text-primary",
                },
                "ref": null,
                "rendered": "Surevy submittions",
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": undefined,
                  "className": "font-weight-normal",
                },
                "ref": null,
                "rendered": null,
                "type": "h5",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <button
                className="btn btn-secondary rounded-0"
                onClick={[Function]}
              >
                Go to survey
              </button>,
              "className": "pt-3",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Go to survey",
                "className": "btn btn-secondary rounded-0",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "Go to survey",
              "type": "button",
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
